add cron function
